# HanoiP83

./: .gitignore  CMakeLists.txt  LICENSE  README.md  conanfile.py
.github/workflows/: release.yml
assets/Texture/: LICENSE
src/: hanoip83.cpp  hanoip83.h  main.cpp
src/Component/: BestRecord.h  ButtonState.h  Clickable.h  DiskCountChanged.h  DiskData.h  HistoryEntry.h  IndicatorState.h  InputResponse.h  Interpolated.h  Layer.h  NeedleIndex.h  NeedleStack.h  NeedleState.h  NeedleTag.h  NextAutoDemo.h  NextSessionConfig.h  Panel.h  PendingSetting.h  RectVisual.h  Serializable.h  SessionState.h  Setting.h  SpriteStates.h  StaticSprite.h  Tags.h  TextLabel.h  ToggleState.h  TweenPosition.h  TweenSequence.h
src/Core/: App.cpp  App.h  EntityFactory.cpp  EntityFactory.h  ISystem.h  Resource.h  SaveManager.cpp  SaveManager.h  SceneSetup.cpp  SceneSetup.h  SystemScheduler.cpp  SystemScheduler.h  WindowState.cpp  WindowState.h
src/Event/: BestRecordChanged.h  BestRecordChangedEvent.h  ButtonClickedEvent.h  NextSessionConfigResetEvent.h  RecordBrokenEvent.h  SessionStateChanged.h  SessionStateChangedEvent.h  SettingsButtonEvent.h  TimerStateChangedEvent.h  ToggleChangedEvent.h
src/System/: AutoDemoSystem.cpp  AutoDemoSystem.h  ButtonSystem.cpp  ButtonSystem.h  GamePhaseSystem.cpp  GamePhaseSystem.h  IndicatorSystem.cpp  IndicatorSystem.h  InputSystem.cpp  InputSystem.h  MoveExecutionSystem.cpp  MoveExecutionSystem.h  MoveSnapshotSystem.cpp  MoveSnapshotSystem.h  NeedleInteractionSystem.cpp  NeedleInteractionSystem.h  NextSessionConfigSystem.h  (+25 more)
test_package/: conanfile.py
(+2 files in other folders)
